Version 0.12.0
Changes:
*  New Data type: Int Vector
*  New Element: DNN simple tracker
*  New Element: DNN draw tracker labels
*  New Element: Panel
*  New Data type: Cable
*  New Element: Cable Input
*  New Element: Cable Output
*  Changed: Decreased ninimum scale level
*  Added optional support for TBB
*  Bugfix: Displayed package name fix. Now it shows name instead of full path
*  Bugfix: Package tree fix. Now package tree is generated "okay".
*  Bugfix: Package update on save fix. Now the package list is updating when package is saved.
*  Bugfix: Package in Package bugfix. Now packeges inside other packages recalculate properly.

Version 0.11.0
Added YOLOv3 object detection.

Changes:
*  Added DNNData data type
*  New element: YOLOv3
*  New element: Threshold element
*  New element: Read classnames
*  New element: Draw labels
*  Added MatrixVector data type
*  New element: Video bufer
*  Bugfix: disconnecting package IO from elements
*  New element: Find class
*  New element: Extract rect
*  New element: Unpack rect
*  Added FloatVector data type

Version 0.10.3
Added Logic/counters

Changes:
* Added count up
* Added count down
* Added count between
* Fixed toggle button save

Version 0.10.2
Fixed major package bugs

Changes:
* Fixed missing filepath when saving package
* Fixed invalid connections after IO removed
* Locked IO for package inside package view
* Fixed bug with mog2 
* Added opening camera by ID to video cap
* Fixed video cap, now it waits with the frame until it's readed.

Version 0.10.1
Added few filesystem features.

Changes:
* Added directory select elem.
* Added directory list elem.
* Added file select elem.
* Added new data type: StringVector
* Added StringVector info elem.
* Added Extract String elem.
* Simplified cmake for plugin build
* Fixed example plugin

Version 0.10.0
Separated libSpaghetti into: Editor, libSpaghetti and libSpaghettiUI. 
Now it is possible to build libSpaghetti and plugins without GUI.

Changes: